<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sateesh.com.goldsilverupdates.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center">

        <TableRow android:gravity="center">

            <ImageButton
                android:id="@+id/gold_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:elevation="8dp"/>

            <ImageButton
                android:id="@+id/silver_image"
                android:layout_width="100dp"
                android:layout_height="100dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:gravity="center"
                android:text="@string/main_gold" />

            <TextView
                android:gravity="center"
                android:text="@string/main_silver" />

        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/chart_image"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <ImageButton
                android:id="@+id/search_image"
                android:layout_width="100dp"
                android:layout_height="100dp" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:gravity="center"
                android:text="@string/main_trends" />

            <TextView
                android:gravity="center"
                android:text="@string/main_search" />

        </TableRow>
    </TableLayout>
</RelativeLayout>
