<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/redview"
            android:gravity="center"
            android:text="@string/chart_city"
            android:textColor="#FFFFFF" />
        

            <Spinner
                android:id="@+id/data_gold_city_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:gravity="center|left"
                android:dropDownWidth="fill_parent"
                android:spinnerMode="dropdown"
                android:background="@drawable/redborder"
                android:padding="1dp"
                >

            </Spinner>



        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"

            android:gravity="center"
            android:visibility="visible"
            android:background="@drawable/dropdwon"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/data_gold_date"
            android:background="@drawable/redview"
            android:textColor="#FFFFFF"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/data_gold_8grams"
            android:background="@drawable/redview"
            android:textColor="#FFFFFF"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:text="@string/data_gold_1grams"
            android:background="@drawable/redview"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:textColor="#FFFFFF"
            android:paddingBottom="5dp"
            android:background="@drawable/redview"
            android:text="@string/data_gold_change"
            android:textAllCaps="true" />
    </LinearLayout>

    <ListView
        android:id="@+id/gold_list_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:layout_weight="1" />

</LinearLayout>