<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/redview"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/chart_city"
                android:textColor="#FFFFFF" />

            <Spinner
                android:id="@+id/chart_gold_city_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/redborder"
                android:dropDownWidth="fill_parent"
                android:gravity="center|left"
                android:padding="1dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:spinnerMode="dropdown">

            </Spinner>


            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="@drawable/dropdwon"
                android:gravity="center"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/redview"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/chart_type"
                android:textColor="#FFFFFF" />

            <Spinner
                android:id="@+id/chart_gold_duration_spinner"
                android:theme="@style/mySpinnerItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/redborder"
                android:dropDownWidth="fill_parent"
                android:entries="@array/chart_arrays"
                android:gravity="center|left"
                android:padding="1dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:spinnerMode="dropdown">

            </Spinner>

            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="@drawable/dropdwon"
                android:gravity="center" />

            <Button
                android:id="@+id/chart_gold_display_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:background="@drawable/redbackground"
                android:text="@string/chart_display"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>